# secure-supply-chain-on-aks

./: .gitignore  .trivyignore  Cargo.toml  Dockerfile  README.md  bonus.sh  constraint.yaml  constraint.yml  demo-reset.sh  demo.env.txt  demo.sh  docker-compose.yml  reset.sh  setup-env.sh  setup.sh  template.yaml  util.sh
.devcontainer/: devcontainer.json
.github/: publish.yml
.github/workflows/: build.yml  main.yml  patch.yml  publish.yml  sbom.yml  test-publish.yml
clusters/my-cluster/: azure-voting-image-policy.yaml  azure-voting-image-update.yaml  azure-voting-image.yaml  azure-voting-kustomization.yaml  azure-voting-source.yaml
clusters/my-cluster/flux-system/: gotk-sync.yaml
docs/: bonus.md  setup.md  workshop.md
manifests/: azure-voting-source.yaml  deployment-app.yaml  deployment-db.yaml  ingress.yaml  kustomization.yaml  service-app.yaml  service-db.yaml
migrations/2022-12-21-034433_create_vote_db/: down.sql  up.sql
scripts/: build-sign-patch-push.sh  copa-automation.sh  duration.sh  git-ops.md  install-dev-tools.sh  template.yaml
scripts/demo/: demo-setup.sh  demo.sh  setup-env.sh
src/: database.rs  main.rs  model.rs  schema.rs
static/: index.html
static/css/: default.css
terraform/: .terraform.lock.hcl  main.tf  output.tf  terraform.tfvars  variables.tf
