[package]
name = "azure-voting-app-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-web = "4.2.1"
diesel = { version = "2.0.2", features = ["postgres", "r2d2"] }
diesel_migrations = "2.0.0"
dotenvy = "0.15.6"
env_logger = "0.10.0"
handlebars = { version = "4.3.6", features = ["dir_source"] }
lazy_static = "1.4.0"
log = "0.4.17"
r2d2 = "0.8.10"
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.91"
